k8s/akhq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: akhq.localdev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  number: 8080
